--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -272,8 +272,7 @@ h1  { text-decoration: underline overline;
 		</div>
 </article>
                   <p>Photo Gallery</p>
-                  <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fill-width" width="360" height="460" autoscale="on" adaptive="414"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
-        
+<widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fill-width" width="360" height="460" autoscale="off" adaptive="414"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
 			<section class="quote-section">
 				<p class="container editable" data-cms-source="/objek-wisata-jogja/index.html" data-cms-index="1">
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut
