--- a/index.html
+++ b/index.html
@@ -320,11 +320,10 @@ p.small {
 			<p class="testimonial-author"><img data-src="/uploads/setya.webp" class="lazyload" alt="Photo of Setyawan" />Setyawan</p>
 		</blockquote>              
 </div>
-</article>
-<h4>Lokasi Bening Abadi Transport Yogya !</h4><br><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" width="300" allowfullscreen="" />
-
-			</div>
-		</section>
+ </article>                 
+</div>
+		<h4>Lokasi Bening Abadi Transport Yogya !</h4><br><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" width="300" allowfullscreen="" />
+<div><widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fill-width" width="360" height="460" autoscale="off" adaptive="414"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
         
 			<section class="quote-section">
 				<p>
