--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ span.wave {
 <section class="main">
 			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
 				<html lang="id">
-
+<head>
 <style>
 h3  { text-decoration: underline overline; text-align:center;
 }
@@ -321,11 +321,12 @@ p.small {
 		</blockquote>              
 </div>
                   <div>
+                    </section>
                   <h4>Lokasi Bening Abadi Transport Yogya !</h4><br><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" width="300" allowfullscreen="" />
 <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fill-width" width="360" height="360" autoscale="off" adaptive="360"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
         
 			<section class="quote-section">
-				<p>
+				<p class="container editable">
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut</p>
 			</section>
 <div class="fb-comments fb_iframe_widget fb_iframe_widget_fluid_desktop" data-href="https://beningabaditransport.com/" data-numposts="5" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=819140248140343&amp;container_width=0&amp;height=600&amp;href=https%3A%2F%2Fbeningabaditransport.com%2F&amp;locale=en_US&amp;numposts=5&amp;sdk=joey&amp;version=v2.9&amp;width=360"><span class="fb"><iframe name="fa35fbece96fec" title="fb:comments Facebook Social Plugin" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" class="borderfb" src="https://web.facebook.com/v2.9/plugins/comments.php?app_id=819140248140343&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D45%23cb%3Df38fb9081a5f31e%26domain%3Dbeningabaditransport.com%26origin%3Dhttps%253A%252F%252Fbeningabaditransport.com%252Ff2c95ec8179b4a%26relation%3Dparent.parent&amp;container_width=0&amp;height=600&amp;href=https%3A%2F%2Fbeningabaditransport.com%2F&amp;locale=en_US&amp;numposts=5&amp;sdk=joey&amp;version=v2.9&amp;width=360" class="" frameborder="2" height="600px" width="360px"></iframe></span></div>
