--- a/index.html
+++ b/index.html
@@ -318,8 +318,9 @@ p.small {
 		<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.webp" width="360" height="239" class="lazyload" /></p>
 			<p class="testimonial-author"><img data-src="/uploads/setya.webp" class="lazyload" alt="Photo of Setyawan" />Setyawan</p>
-		</blockquote>             </article>
+		</blockquote>             
 </div>
+</article>
 </head>               
                   <h4>Lokasi Bening Abadi Transport Yogya !</h4><br><img alt="peta" data-src="/uploads/bening-map.webp" class="lazyload" width="300" allowfullscreen="" />
 <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fill-width" width="360" height="360" autoscale="off" adaptive="360"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
