--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ span.wave {
 				<html lang="id">
 <head>
 <style>
-h3  { text-decoration: underline overline; text-align:center;
+h3  { text-decoration: underline; text-align:center;
 }
 p.small {
   line-height: 1;
@@ -297,7 +297,7 @@ p.small {
 }
 </style>
 	<div class="page-header"> 
-         <h1>Sewa Motor Jogja, Rental Mobil Yogya, Penginapan Yogyakarta</h1>
+         <h1>Sewa Motor Jogja, Rental Mobil Yogya, Penginapan Yogyakarta</h1><hr>
 	</div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 	<h3><q>Sewa Motor Mulai 50 Ribu seharian | Rental Mobil Mulai 300 Ribu perhari | Penginapan Mulai 150 Ribu permalam</q></h3><h2><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
