--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -271,7 +271,8 @@ h1  { text-decoration: underline overline;
 		<p>&nbsp;</p>
 		</div>
 </article>
-                <section class="quote-section">
+<widgetic-embed id="5e2d8dc7ecb2a1fc528b4569" resize="fixed" width="200" height="374" align="left" autoscale="off"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>      
+                  <section class="quote-section">
 				<p class="container editable" data-cms-source="/objek-wisata-jogja/index.html" data-cms-index="1">
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut
 				</p>
