--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ p.small {
                 
                   <h4>Lokasi Bening Abadi Transport Yogya !</h4><hr>
 <widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="275" align="left" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>                
-<widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fill-width" width="360" height="360" autoscale="on" adaptive="360"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
+<widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="360" height="360" autoscale="on" adaptive="360"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
         
 <section class="quote-section">
 				<p class="container editable">
