--- a/index.html
+++ b/index.html
@@ -219,7 +219,25 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 .cms-editor-active .editor-link { display: inline-block; margin: 0 auto 20px auto; padding: 10px 20px; }
 
 .cms-editor-active nav .editor-link { display: inline; margin: 0; padding: 20px 15px; }
+* {
+  box-sizing: border-box;
+}
 
+/* Create two equal columns that floats next to each other */
+.column2 {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row2:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+  
 /*# sourceMappingURL=main.css.map */
  
 nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
@@ -325,8 +343,14 @@ p.small {
               <body>
                 
                   <h4>Lokasi Bening Abadi Transport Yogya !</h4><hr>
-<widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="275" align="left" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>                
-<widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="360" height="360" autoscale="on" adaptive="360"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
+<div class="row2">
+  <div class="column2">
+    <p><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="275" align="left" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
+  </div>
+  <div class="column2">
+    <p><widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="360" height="360" autoscale="on" adaptive="360"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
+  </div>
+</div>
         
 <section class="quote-section">
 				<p class="container editable">
