--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 
 /* Create two equal columns that floats next to each other */
 .column2 {
-  float: left;
+  float: right;
   width: 50%;
   padding: 10px;
   height: 300px; /* Should be removed. Only for demonstration */
@@ -334,7 +334,7 @@ p.small {
 	
 		<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" src="/uploads/kamar-icon1.webp" width="360" height="239" /></p>
-			<p class="testimonial-author"><img data-src="/uploads/setya.webp" alt="Photo of Setyawan" />Setyawan</p>
+			<p class="testimonial-author"><img src="/uploads/setya.webp" alt="Photo of Setyawan" />Setyawan</p>
 		</blockquote>             
 </div>
 </article>
