--- a/index.html
+++ b/index.html
@@ -224,13 +224,18 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 }
 
 /* Create two equal columns that floats next to each other */
+.column1 {
+  float: left;
+  width: 50%;
+  padding: 5px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
 .column2 {
   float: right;
   width: 50%;
-  padding: 10px;
+  padding: 5px;
   height: 300px; /* Should be removed. Only for demonstration */
 }
-
 /* Clear floats after the columns */
 .row2:after {
   content: "";
@@ -344,7 +349,7 @@ p.small {
                 
                   <h4>Lokasi Bening Abadi Transport Yogya !</h4><hr>
 <div class="row2">
-  <div class="column2">
+  <div class="column1">
     <p><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="260" align="left" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
   </div>
   <div class="column2">
