--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ p.small {
               <body>
                 
                   <h4>Lokasi Bening Abadi Transport Yogya !</h4><hr>
-<div>
+<div class="container">
   <div class="column1">
     <p><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="260" align="left" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
   </div>
