--- a/index.html
+++ b/index.html
@@ -349,10 +349,10 @@ p.small {
                 
                   <h4>Lokasi Bening Abadi Transport Yogya !</h4><hr>
 <div class="container">
-  <div class="column1">
+  <div class="footer-columns">
     <p><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="260" align="left" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
   </div>
-  <div class="column2">
+  <div class="footer-columns">
     <p><widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="360" height="260" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
   </div>
 </div>
