--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ footer { position: relative; font-size: 1rem; }
 
 footer h3 { font-size: 2.5rem; margin: 0 0 10px 0; }
 
-footer .footer-columns { display: flex; flex-flow: wrap; margin: -5px -5px 5px -5px; }
+footer .footer-columns { display: fixed; flex-flow: wrap; margin: -2px -2px 2px -2px; }
 
 footer .legal-line { width: 100%; padding: 30px 0 0 0; margin: 0; }
 
