--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ footer { position: relative; font-size: 1rem; }
 
 footer h3 { font-size: 2.5rem; margin: 0 0 10px 0; }
 
-footer .footer-columns { display: fixed; flex-flow: wrap; margin: -2px -2px 2px -2px; }
+footer .footer-columns { display: flex; flex-flow: wrap; margin: -2px -2px 2px -2px; }
 
 footer .legal-line { width: 100%; padding: 30px 0 0 0; margin: 0; }
 
@@ -297,8 +297,10 @@ span.wave {
 </nav>
 <section class="main">
 			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
-				<html lang="id">
+				<html lang="id-ID">
 <head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
 h3  { text-decoration: underline; text-align:center;
 }
