--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@ p.small {
       <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="360" height="260" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></li>
   </ul>
 </div>
+</div>
         
 <section class="quote-section">
 				<p class="container editable">
