--- a/index.html
+++ b/index.html
@@ -350,16 +350,15 @@ p.small {
               <body>
                 
                   <h4>Lokasi Bening Abadi Transport Yogya !</h4><hr>
-<div class="container">
-  <div class="footer-columns">
-    <ul class="footer-links">
-    <li>
-      <widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="260" align="left" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></li></ul>
-  	<ul class="footer-links">
-    <li>
-      <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="360" height="260" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></li>
-  </ul>
-</div>
+<div class="testimonials">
+<blockquote class="testimonial">
+<p class="testimonial-message">
+<widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="260" align="left" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
+</blockquote>
+<blockquote class="testimonial">
+<p class="testimonial-message">
+      <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="360" height="260" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
+  </blockquote>
 </div>
         
 <section class="quote-section">
