--- a/index.html
+++ b/index.html
@@ -354,10 +354,12 @@ p.small {
 <blockquote class="testimonial">
 <p class="testimonial-message">
 <widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="260" align="left" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
+<p class="testimonial-author"><img src="/uploads/setya.webp" alt="Photo of Setyawan" />Setyawan</p>
 </blockquote>
 <blockquote class="testimonial">
 <p class="testimonial-message">
       <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="360" height="260" autoscale="on"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
+<p class="testimonial-author"><img src="/uploads/setya.webp" alt="Photo of Setyawan" />Setyawan</p>
   </blockquote>
 </div>
         
