--- a/index.html
+++ b/index.html
@@ -299,8 +299,7 @@ span.wave {
 			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
 				<html lang="id-ID">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 h3  { text-decoration: underline; text-align:center;
 }
