--- a/index.html
+++ b/index.html
@@ -262,6 +262,22 @@ span.wave {
    40% { transform: rotate(  9.0deg) }
    50% { transform: rotate(  0.0deg) }
   100% { transform: rotate(  0.0deg) }
+h3  { text-decoration: underline; text-align:center;
+}
+p.small {
+  line-height: 1;
+  text-align: justify;
+  text-justify: inter-word;
+}
+.stabilo { 
+     background-color:#F0E68C;
+}
+.fb {
+     vertical-align: bottom; width: 400px; height: 239px;
+}
+.borderfb { border: medium none; visibility: visible; width: 400px; height: 239px;
+}
+.fb2 { vertical-align: bottom; width: 360px; height: 20px;
 }
 </style>
       <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quattrocento|Vollkorn:400,400i,700,700i" />
@@ -275,7 +291,7 @@ span.wave {
 		</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
 </head>
-	<body>
+<body>
 		<nav>
 	
 	
@@ -296,29 +312,7 @@ span.wave {
 	
 </nav>
 <section class="main">
-			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
-				<html lang="id-ID">
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-h3  { text-decoration: underline; text-align:center;
-}
-p.small {
-  line-height: 1;
-  text-align: justify;
-  text-justify: inter-word;
-}
-.stabilo { 
-     background-color:#F0E68C;
-}
-.fb {
-     vertical-align: bottom; width: 400px; height: 239px;
-}
-.borderfb { border: medium none; visibility: visible; width: 400px; height: 239px;
-}
-.fb2 { vertical-align: bottom; width: 360px; height: 20px;
-}
-</style>
+			<div class="container">
 	<div class="page-header"> 
          <h1>Sewa Motor Jogja, Rental Mobil Yogya, Penginapan Yogyakarta</h1><hr>
 	</div>
@@ -344,11 +338,7 @@ p.small {
 		</blockquote>             
 </div>
 </article>
-</head>
-               
-              <body>
-                
-                  <h4>Lokasi Bening Abadi Transport Yogya !</h4><hr>
+<h4>Lokasi Bening Abadi Transport Yogya !</h4><hr>
 <div class="testimonials">
 <blockquote class="testimonial">
 <p class="testimonial-message">
@@ -485,5 +475,3 @@ p.small {
                 </p>
              </div>
 		</footer>
-</body>
-</html>
