--- a/index.html
+++ b/index.html
@@ -474,4 +474,5 @@ p.small {
 					&copy; 2020 Bening Abadi Transport &bull;
                 </p>
              </div>
-		</footer>
+		</footer><body>    
+              <html>
