--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@ h6 { font-size: 2rem; }
 a { color: #4489b1; transition: color 0.2s ease; text-decoration: italic; }
 
 a:hover { color: #ff0000; }
-
+.stabilo { 
+     background-color:#F0E68C;
+}
 body { margin: 0; padding: 0; background-color: #a6a8a6; }
 
 .container { max-width: 960px; margin: 0 auto; }
@@ -198,7 +200,7 @@ footer .legal-line a { font-style: italic; }
 
 label { display: block; letter-spacing: 4px; font-size: 1.5rem; }
 
-.btn, input, textarea { padding: 10px; margin: 10px 0; box-shadow: 1px 1px 5px 0 rgba(100, 100, 100, 0.2); border: 0; border-radius: 2px; width: 100%; max-width: 500px; margin: 0 0 20px 0; box-sizing: border-box; font-size: 2rem; }
+.btn, input, textarea { padding: 10px; margin: 10px 0; box-shadow: 1px 1px 5px 0 rgba(100, 100, 100, 0.2); border: 0; border-radius: 2px; width: 100%; max-width: 500px; margin: 0 0 20px 0; box-sizing: border-box; font-size: t; }
 
 textarea { min-height: 250px; }
 
@@ -268,9 +270,6 @@ p.small {
   line-height: 1;
   text-align: justify;
   text-justify: inter-word;
-}
-.stabilo { 
-     background-color:#F0E68C;
 }
 .fb {
      vertical-align: bottom; width: 400px; height: 239px;
