--- a/index.html
+++ b/index.html
@@ -474,5 +474,6 @@ span.wave {
 					&copy; 2020 Bening Abadi Transport &bull;
                 </p>
              </div>
-		</footer><body>    
-              <html>
+		</footer>
+              </body>    
+              </html>
