--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@ span.wave {
 <blockquote class="testimonial">
 <div style="position: absolute; top: -10000px; width: 412px; height: 0px;"><div></div><div><iframe name="fb_xdm_frame_https" id="fb_xdm_frame_https" aria-hidden="false" title="Facebook Cross Domain Communication Frame" tabindex="-1" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" style="border: medium none;" src="https://staticxx.facebook.com/connect/xd_arbiter.php?version=45#channel=f3fe6d815fb27f6&amp;origin=http%3A%2F%2Ffmi.gigitjari.xyz" frameborder="0"></iframe></div></div>
 <span class="fb2"><iframe name="f11ec0dbfffc814" title="fb:like Facebook Social Plugin" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" style="border: medium none; visibility: visible; width: 360px; height: 20px;" src="https://web.facebook.com/v2.9/plugins/like.php?action=like&amp;app_id=819140248140343&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D45%23cb%3Df27417212967ad6%26domain%3Dfmi.gigitjari.xyz%26origin%3Dhttp%253A%252F%252Ffmi.gigitjari.xyz%252Ff3fe6d815fb27f6%26relation%3Dparent.parent&amp;container_width=412&amp;href=https%3A%2F%2Fbeningabaditransport.com%2F&amp;layout=standard&amp;locale=en_US&amp;sdk=joey&amp;share=true&amp;show_faces=true" class="" width="160px" height="360px" frameborder="0"></iframe></span>
-</blockquote>
-<noscript>Browser anda tidak mengaktifkan/mendukung Javascript</noscript><hr>
+</blockquote><hr>
+<noscript>Browser anda tidak mengaktifkan/mendukung Javascript</noscript>
 <footer>
 			<div class="container">
 	        <div class="footer-columns">
