--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@ span.wave {
 		<a href="/penginapan" title="Penginapan Yogya">Penginapan</a>
 	
 </nav>
+</body>
 <section class="main">
 			<div class="container">
 	<div class="page-header"> 
