--- a/index.html
+++ b/index.html
@@ -339,6 +339,9 @@ span.wave {
 		</blockquote>             
 </div>
 </article>
+</head></html>
+			</div>
+		</section>
 <h4>Lokasi Bening Abadi Transport Yogya !</h4><hr>
 <div class="testimonials">
 <blockquote class="testimonial">
@@ -479,3 +482,5 @@ span.wave {
                 </p>
              </div>
 		</footer>
+  <body>
+  </html>
