--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ span.wave {
 </head></html>
 			</div>
 		</section>
-<h4>Lokasi Bening Abadi Transport Yogya !</h4><hr>
+<h4>--->Lokasi Bening Abadi Transport Yogya !</h4><hr>
 <div class="testimonials">
 <blockquote class="testimonial">
 <p class="testimonial-message">
