--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ span.wave {
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut</p>
 			</section>
 </head></html>
-			
+  </div>			
 		</section>            
 <div class="testimonials">
 <blockquote class="testimonial">
