--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ span.wave {
 <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="340" height="260" align="center" autoscale="off"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
 </blockquote>
 </div>
-</head></html>
+              </section>
               <section class="quote-section">
 				<p class="container editable">
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut</p>
