--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ span.wave {
 		</blockquote>             
 </div>
 </article>
-<h4>--->Lokasi Bening Abadi Transport Yogya !</h4><hr>
+<h4>Lokasi Bening Abadi Transport Yogya !</h4><hr>
 <div class="testimonials">
 <blockquote class="testimonial">
 <p class="testimonial-message">
