--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ span.wave {
 	
 		<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" src="/uploads/kamar-icon1.webp" width="360" height="239" /></p>
-			<p class="testimonial-author"><img src="/uploads/setya.webp" alt="Photo of Setyawan" />Setyawan</p>
+			<p class="testimonial-author"><img src="/uploads/aji.webp" alt="Photo of Aji" />Aji</p>
 		</blockquote>             
 </div>
 </article>
