--- a/index.html
+++ b/index.html
@@ -280,11 +280,10 @@ span.wave {
   100% { transform: rotate(  0.0deg) }
 }
 </style>
-      <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quattrocento|Vollkorn:400,400i,700,700i" />
+      <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Antic+Slab|Fira+Sans|Quattrocento|Vollkorn:400,400i,700,700i" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
                 <link rel="icon" type="image/png" href="/favicon.png" />
-                <link href="//fonts.googleapis.com/css?family=Antic+Slab|Fira+Sans" rel="stylesheet" />
 <script>				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 				ga('create', 'UA-131533286-1', 'auto');
 				ga('send', 'pageview');
