--- a/index.html
+++ b/index.html
@@ -451,8 +451,8 @@ span.wave {
 							
 						</ul>
 					<ul class="footer-links">
-					<li><b>Syarat Dan Ketentuan Berlaku</b><br>
- - Jam Operasional 09.00 – 22.00 WIB<br>
+					<li><b>Syarat Dan Ketentuan Berlaku</b></li><br>
+ <li>- Jam Operasional 09.00 – 22.00 WIB</li><br>
 - Jam Operasional 09.00 – 18.00 WIB khusus cabang Janturan 32B<br>
 <p>- Pengantaran dan pengambilan mobil/motor mulai jam 09.00-21.00 WIB.              Diluar  jam diatas bisa langsung datang ke garasi kami.</p><br>
 - 3 Tanda pengenal/ID (KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS)<br>
