--- a/index.html
+++ b/index.html
@@ -451,15 +451,15 @@ span.wave {
 							
 						</ul>
 					<ul class="footer-links">
-					<li><b>Syarat Dan Ketentuan Berlaku</b></li><br>
- <li>- Jam Operasional 09.00 – 22.00 WIB</li><br>
-- Jam Operasional 09.00 – 18.00 WIB khusus cabang Janturan 32B<br>
-<p>- Pengantaran dan pengambilan mobil/motor mulai jam 09.00-21.00 WIB.              Diluar  jam diatas bisa langsung datang ke garasi kami.</p><br>
-- 3 Tanda pengenal/ID (KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS)<br>
-- No Telp HP customer yang bisa dihubungi<br>
-- Tanpa uang jaminan<br>
-- Overtime 10% per jam dari Tarif Sewa<br>
-<b>- Saat hari High Season harga berbeda dengan harga hari normal</b></li><hr>
+					<li><b>Syarat Dan Ketentuan Berlaku</b></li>
+ <li>- Jam Operasional 09.00 – 22.00 WIB</li>
+<li>- Jam Operasional 09.00 – 18.00 WIB khusus cabang Janturan 32B</li>
+<p><li>- Pengantaran dan pengambilan mobil/motor mulai jam 09.00-21.00 WIB.              Diluar  jam diatas bisa langsung datang ke garasi kami.</li></p>
+<li>- 3 Tanda pengenal/ID (KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS)</li>
+<li>- No Telp HP customer yang bisa dihubungi</li>
+<li>- Tanpa uang jaminan</li>
+<li>- Overtime 10% per jam dari Tarif Sewa</li>
+<li><b>- Saat hari High Season harga berbeda dengan harga hari normal</b></li><hr>
 					</ul>
 				</div>
 			</div>
