--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ span.wave {
 <div class="testimonials">
 <blockquote class="testimonial">
 <p class="testimonial-message">
-<iframe class="layload"><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="340" height="260" align="center" autoscale="off"></widgetic-embed></iframe><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
+<iframe class="lazyload"><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="340" height="260" align="center" autoscale="off"></widgetic-embed></iframe><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
 </blockquote>
 <blockquote class="testimonial">
 <p class="testimonial-message">
