--- a/index.html
+++ b/index.html
@@ -341,8 +341,7 @@ span.wave {
 <h4>Lokasi Bening Abadi Transport Yogya !</h4><hr>
 <div class="testimonials">
 <blockquote class="testimonial">
-<p class="testimonial-message">
-<iframe class="lazyload"><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="340" height="260" align="center" autoscale="off"></widgetic-embed></iframe><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
+<p class="testimonial-message"><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="340" height="260" align="center" autoscale="off" class="lazyload"> <widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
 </blockquote>
 <blockquote class="testimonial">
 <p class="testimonial-message">
