--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ footer .legal-line a { font-style: italic; }
 
 .footer-links li a:hover svg { fill: #73a9c9; }
 
-.testimonials { font-size: 1.5rem; display: flex; flex-wrap: wrap; margin: 0 -10px; }
+.testimonials { font-size: 1.2rem; display: flex; flex-wrap: wrap; margin: 0 -10px; }
 
 .testimonial { flex: 1 0 0%; margin: 0 10px; }
 
@@ -339,13 +339,15 @@ span.wave {
 </div>
 </article>
 <h4>Lokasi Bening Abadi Transport Yogya!</h4><hr>
+<div class="testimonial">
 <blockquote class="testimonial">
-<p class="testimonial-message"><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="340" height="260" align="center" autoscale="off"><widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
+<p class="testimonial-message"><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="340" height="260" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
 </blockquote>
 <blockquote class="testimonial">
 <p class="testimonial-message">
-<widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="340" height="260" align="center" autoscale="off"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
+<widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="340" height="260" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
 </blockquote>
+</div>
               </section>
               <section class="quote-section">
 				<p class="container editable">
