--- a/index.html
+++ b/index.html
@@ -339,10 +339,8 @@ span.wave {
 </div>
 </article>
 <h4>Lokasi Bening Abadi Transport Yogya!</h4><hr>
-<div class="testimonial">
-<p class="testimonial-message"><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="260" height="260" align="left" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
-<p class="testimonial-message">
-<widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="260" height="260" align="right" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></p>
+<div class="testimonial"><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="260" height="260" align="left" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
+<widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="260" height="260" align="right" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
 </div>
               </section>
               <section class="quote-section">
