--- a/index.html
+++ b/index.html
@@ -339,8 +339,11 @@ span.wave {
 </div>
 </article>
 <h4>Lokasi Bening Abadi Transport Yogya!</h4><hr>
-<div class="testimonial"><widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="260" height="260" align="left" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
-<widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="260" height="260" align="right" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
+<div class="row2">
+<div class="column1>
+<widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="260" height="260" align="left" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></div>
+<div class="column1>
+<widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="260" height="260" align="right" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></div>
 </div>
               </section>
               <section class="quote-section">
