--- a/index.html
+++ b/index.html
@@ -241,10 +241,9 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 
 /* Create two equal columns that floats next to each other */
 .column1 {
-  float: left;
+  float: center;
   width: 50%;
   padding: 5px;
-  height: 300px; /* Should be removed. Only for demonstration */
 }
 .column2 {
   float: right;
@@ -342,7 +341,7 @@ span.wave {
 <div class="row2">
 <div class="column1">
 <widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="260" height="260" align="left" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></div>
-<div class="column2">
+<div class="column1">
 <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="260" height="260" align="right" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></div>
 </div>
               </section>
