--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 /* Clear floats after the columns */
 .row2:after {
   content: "";
-  display: table;
+  display: flex;
   clear: both;
 }
   
