--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@ span.wave {
 	
 </nav>
 </body>
-<section class="main">
-			<div class="container">
+<section>
+<div class="container">
 	<div class="page-header"> 
          <h1>Sewa Motor Jogja, Rental Mobil Yogya, Penginapan Yogyakarta</h1><hr>
 	</div>
@@ -326,12 +326,11 @@ span.wave {
 			<p class="testimonial-message"><a href="/sewa-motor" title="Sewa MotorYogya">SEWA MOTOR MULAI 50 RIBU!!</a></p><p><img alt="motor" data-src="/uploads/motor-baru1.webp" width="360" height="239" class="lazyload" /></p>
 			<p class="testimonial-author"><img src="/uploads/aji.webp" alt="Photo of Adjie" />Adjie</p>
 		</blockquote>
-	    <blockquote class="testimonial">
+<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" data-src="/uploads/mobil-icon1.webp" width="360" height="239" class="lazyload" /></p>
 			<p class="testimonial-author"><img src="/uploads/nunik.webp" alt="Photo of Nunik" />Nunik</p>
 		</blockquote>
-	
-		<blockquote class="testimonial">
+<blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.webp" width="360" height="239" class="lazyload" /></p>
 			<p class="testimonial-author"><img src="/uploads/aji.webp" alt="Photo of Aji" />Aji</p>
 		</blockquote>             
@@ -344,7 +343,8 @@ span.wave {
 <div class="column1">
 <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="360" height="360" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></div>
 </div>
-              </section>
+</div>
+</section>
               <section class="quote-section">
 				<p class="container editable">
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut</p>
