--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ span.wave {
 	
 </nav>
 </body>
-<section>
+<section class="main">
 <div class="container">
 	<div class="page-header"> 
          <h1>Sewa Motor Jogja, Rental Mobil Yogya, Penginapan Yogyakarta</h1><hr>
@@ -342,6 +342,8 @@ span.wave {
 <widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="260" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></div>
 <div class="column1">
 <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="360" height="360" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
+</div>
+</div>
 </div>
 </section>
               <section class="quote-section">
