--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@ header, footer, section { padding: 10px 20px; }
 
 .staff-details .staff-image { margin-right: 20px; }
 
-footer { position: relative; font-size: 0.8rem; }
+footer { position: relative; font-size: 0.6rem; }
 
 footer h3 { font-size: 1.2rem; margin: 0 0 10px 0; }
 
-footer .footer-columns { display: fixed; flex-flow: wrap; margin: -1px -1px 1px -1px; }
+footer .footer-columns { display: flex; flex-flow: wrap; margin: -1px -1px 1px -1px; }
 
 footer .legal-line { width: 100%; padding: 30px 0 0 0; margin: 0; }
 
