--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ header, footer, section { padding: 10px 20px; }
 
 .light-section, .main { background-color: #f5f5f7; box-shadow: inset 0px 15px 15px -15px rgba(100, 100, 100, 0.2); }
 
-.dark-section, .quote-section { background-color: #3e3f46; color: #c1c1c1; box-shadow: inset 0px 15px 15px -15px rgba(0, 0, 0, 0.5); }
+.dark-section, .quote-section { background-color: #3e3f46; color: #cecece; box-shadow: inset 0px 15px 15px -15px rgba(0, 0, 0, 0.5); }
 
 .dark-section a, .quote-section a { color: #efefef; transition: color 0.2s ease; }
 
