--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ footer .legal-line a { font-style: italic; }
 
 .testimonials { font-size: 1.2rem; display: flex; flex-wrap: wrap; margin: 0 -10px; }
 
-.testimonial { flex: 1 0 0%; margin: 0 10px; }
+.testimonial { flex: 1 0 0%; margin: 0 20px; }
 
 .testimonial-author, .post-summary-author { display: flex; align-items: center; color: #75828a; margin: 10px 5px 0 5px; }
 
@@ -332,7 +332,7 @@ span.wave {
 </div>
 </article>
 <h4>Lokasi Bening Abadi Transport Yogya!</h4><hr>
-<div class="row2">
+<div class="testimonial">
 <div class="column1">
 <widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="260" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></div>
 <div class="column1">
