--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ span.wave {
 <div class="testimonial">
 <div class="column1">
 <widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="260" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></div>
-<div class="column1">
+<div class="testimonials">
 <widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="360" height="360" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
 </div>
 </div>
