--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@ span.wave {
 <h4>Lokasi Bening Abadi Transport Yogya!</h4><hr>
 <div class="testimonials">
 <div class="testimonial">
-<widgetic-embed id="5e2d9880ecb2a1865b8b4569" resize="fixed" width="360" height="260" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></div>
+<widgetic-embed id="5e2d9880ecb2a1865b8b4569" title="peta" resize="fixed" width="360" height="260" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></div>
 <div class="testimonial">
-<widgetic-embed id="5e2d332aecb2a1610b8b456b" resize="fixed" width="360" height="360" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
+<widgetic-embed id="5e2d332aecb2a1610b8b456b" title="galeri lokasi" resize="fixed" width="360" height="360" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
 </div>
 </div>
 </div>
