--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -280,7 +280,7 @@ h1  { text-decoration: underline overline;
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut
 				</p>
 			</section>
-<iframe class="widgetic-composition" name="114527aa-3d19-0542-27a4-3a17700168d5" allowfullscreen="true" scrolling="no" src="https://widgetic.com/api/v2/compositions/5e2d9880ecb2a1865b8b4569/embed.html?lo=https%3A%2F%2Fbeningabaditransport.com&amp;demo=true" style="position:absolute;top:0;left:0;width:0;height:0;max-width:100%;min-height:100%;min-width:100%"></iframe>
+<iframe class="widgetic-composition" name="114527aa-3d19-0542-27a4-3a17700168d5" allowfullscreen="false" scrolling="no" src="https://widgetic.com/api/v2/compositions/5e2d9880ecb2a1865b8b4569/embed.html?lo=https%3A%2F%2Fbeningabaditransport.com&amp;demo=true" style="position:absolute;bottom:0;left:0;width:0;height:0;max-width:10%;min-height:10%;min-width:10%"></iframe>
 
 		
         <footer>
