--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="id-ID">
-	
-	<head>
-q<meta charset="utf-8" />
+<head>
+<meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Objek Wisata Jogja</title>
