--- a/index.html
+++ b/index.html
@@ -334,15 +334,15 @@ span.wave {
 <h4>Lokasi Bening Abadi Transport Yogya!</h4><hr>
 <div class="testimonials">
 <div class="testimonial">
-<widgetic-embed id="5e2d9880ecb2a1865b8b4569" title="peta" resize="fixed" width="360" height="260" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script></div>
+<iframe class="widgetic-composition" name="114527aa-3d19-0542-27a4-3a17700168d5" title="peta" allowfullscreen="false" scrolling="no" src="https://widgetic.com/api/v2/compositions/5e2d9880ecb2a1865b8b4569/embed.html?lo=https%3A%2F%2Fbeningabaditransport.com&amp;demo=true" style="position;relative;bottom:50;left:50;width:50;height:90;max-width:100%;min-height:100%;min-width:100%"></iframe>
 <div class="testimonial">
-<widgetic-embed id="5e2d332aecb2a1610b8b456b" title="galeri lokasi" resize="fixed" width="360" height="360" align="center" autoscale="off" class="lazyload"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script>
+<iframe class="widgetic-composition" name="ded18312-b805-0a2d-cfdb-495212e93cca" title="galeri" allowfullscreen="false" scrolling="no" src="https://widgetic.com/api/v2/compositions/5e2d332aecb2a1610b8b456b/embed.html?lo=https%3A%2F%2Fbeningabaditransport.com&amp;demo=true" style="position:relative;bottom:50;left:50;width:50;height:90;max-width:100%;min-height:100%;min-width:100%"></iframe>
 </div>
 </div>
 </div>
 </section>
-              <section class="quote-section">
-				<p class="container editable">
+<section class="quote-section">
+<p class="container editable">
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut</p>
 			</section>
  <footer>
