--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@ span.wave {
 <h4>Lokasi Bening Abadi Transport Yogya!</h4><hr>
 <div class="testimonials">
 <div class="testimonial">
-<iframe class="widgetic-composition" name="114527aa-3d19-0542-27a4-3a17700168d5" title="peta" allowfullscreen="false" scrolling="no" class="lazyload" data-src="https://widgetic.com/api/v2/compositions/5e2d9880ecb2a1865b8b4569/embed.html?lo=https%3A%2F%2Fbeningabaditransport.com&amp;demo=true" style="position;relative;bottom:50;left:50;width:50;height:90;max-width:100%;min-height:100%;min-width:100%"></iframe>
+<iframe class="widgetic-composition" name="114527aa-3d19-0542-27a4-3a17700168d5" title="peta" allowfullscreen="false" scrolling="no" src="https://widgetic.com/api/v2/compositions/5e2d9880ecb2a1865b8b4569/embed.html?lo=https%3A%2F%2Fbeningabaditransport.com&amp;demo=true" style="position;relative;bottom:50;left:50;width:50;height:90;max-width:100%;min-height:100%;min-width:100%"></iframe>
 <div class="testimonial">
-<iframe class="widgetic-composition" name="ded18312-b805-0a2d-cfdb-495212e93cca" title="galeri" allowfullscreen="false" scrolling="no" class="lazyload" data-src="https://widgetic.com/api/v2/compositions/5e2d332aecb2a1610b8b456b/embed.html?lo=https%3A%2F%2Fbeningabaditransport.com&amp;demo=true" style="position:relative;bottom:50;left:50;width:50;height:90;max-width:100%;min-height:100%;min-width:100%"></iframe>
+<iframe class="widgetic-composition" name="ded18312-b805-0a2d-cfdb-495212e93cca" title="galeri" allowfullscreen="false" scrolling="no" src="https://widgetic.com/api/v2/compositions/5e2d332aecb2a1610b8b456b/embed.html?lo=https%3A%2F%2Fbeningabaditransport.com&amp;demo=true" style="position:relative;bottom:50;left:50;width:50;height:90;max-width:100%;min-height:100%;min-width:100%"></iframe>
 </div>
 </div>
 </div>
