--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -24,7 +24,8 @@
 				ga('create', 'UA-131533286-1', 'auto');
 				ga('send', 'pageview');
 			</script>
-			<script async src='https://www.google-analytics.com/analytics.js'></script>
+			<script async src='https://www.google-analytics.com/analytics.js'></script>            
+<script async src='/js/wawa.js'></script>
 <style>
 html { font-size: 11px; -webkit-tap-highlight-color: transparent; }
 
