--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -25,7 +25,7 @@
 				ga('send', 'pageview');
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>            
-<script async src='/js/wawa.js'></script>
+<script src="/cdn-cgi/apps/head/iZpesw_8xAzrPHoMBAv8XxELD3Y.js"></script><link rel="canonical" href="https://beningabaditransport.com" />
 <style>
 html { font-size: 11px; -webkit-tap-highlight-color: transparent; }
 
