--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -25,7 +25,7 @@
 				ga('send', 'pageview');
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>            
-<script async src="/js/wa.js"></script><link rel="canonical" href="https://beningabaditransport.com" /></script>
+<script src="/js/wa.js"></script>
 <style>
 html { font-size: 11px; -webkit-tap-highlight-color: transparent; }
 
