--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ span.wave {
 		<link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
                 <link rel="icon" type="image/png" href="/favicon.png" />
 <script src="/js/lazysizes.min.js" async=""></script>
-<!--Do not alter or remove this code! Data Member=https://beningabaditransport.com tracker ID = SNVVZQQ0  --!> <a href="https://official.my/addurl.php" id="SNVVZQQ0">increase web traffic</a> <!--End Official Free Search Engine Submission tracker code--!>
+<!--Do not alter or remove this code! Data Member=https://beningabaditransport.com tracker ID = SNVVZQQ0  --!> <a href="https://official.my/addurl.php" id="SNVVZQQ0"> </a> <!--End Official Free Search Engine Submission tracker code--!>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
