--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -20,6 +20,7 @@
 		<link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
         <link href="//fonts.googleapis.com/css?family=Antic+Slab|Fira+Sans" rel="stylesheet" />
+<style>
 html { font-size: 11px; -webkit-tap-highlight-color: transparent; }
 
 @media (min-width: 700px) { html { font-size: 11px; } }
