--- a/index.html
+++ b/index.html
@@ -343,6 +343,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</blockquote>             
 </div>
 </article>
+<h4>Lokasi Bening Abadi Transport Jogja!</h4><hr>
+<div class="testimonials">
+<div class="testimonial">
+<widgetic-embed id="5ebb6ae1ecb2a148378b4567" resize="fixed" width="544" height="307" align="left" autoscale="on" adaptive="414"></widgetic-embed><script async src="https://widgetic.com/sdk/sdk.js"></script
 </div>
 </div>
 </section>
