--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ h1 { font-size: 2.2rem; line-height: 30px; margin: 0 -1px 0 0; }
 
 @media (min-width: 700px) { h1 { line-height: 30px; font-size: 2.2rem; text-align: center; } }
 
-h2 { font-size: 2.6rem; }
+h2 { font-size: 2.6rem; text-align: center; } 
 
 h3 { font-size: 2.5rem; }
 
