--- a/index.html
+++ b/index.html
@@ -316,19 +316,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section class="main">
 <div class="container">
 	<div class="page-header"> 
-         <h1>Sewa Motor Jogja, Rental Mobil Yogya, Penginapan Yogyakarta</h1><hr>
+         <h1>Rental Mobil Jogja, Penginapan Murah Yogyakarta</h1><hr>
 	</div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
-	<h3><q>Sewa Motor Mulai 50 Ribu seharian | Rental Mobil Mulai 300 Ribu perhari | Penginapan Mulai 150 Ribu permalam</q></h3><h2><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
+	<h3><q>Rental Mobil Mulai 300 Ribu perhari | Penginapan Mulai 150 Ribu permalam</q></h3><h2><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
 <div class="boxed">
-<p class="small"><q>Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus terkenal seperti UGM dan UNY Jogja. Sewa motor, rental mobil, penginapan dan guest house adalah layanan utama kami di kota yogya. Di awal tahun 2020 ini kami memulai dengan tambahan unit motor baru seperti Honda Genio dan Honda Beat Street. Kami rental kan dengan harga yang sangat terjangkau untuk kalangan mahasiswa jogja dan customer umum. Untuk guest house kamar yang kami tawarkan juga bisa anda booking melalui aplikasi Traveloka dengan harga yang lebih murah dan terjangkau untuk mahasiswa dan pelajar yogya. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.<span class="wave">👋</span></q></p><hr>
+<p class="small"><q>Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus terkenal seperti UGM dan UNY Jogja. Rental mobil, penginapan dan guest house adalah layanan utama kami di kota yogya. Di awal tahun 2020 ini kami memulai dengan tambahan unit motor baru seperti Honda Genio dan Honda Beat Street. Kami rental kan dengan harga yang sangat terjangkau untuk kalangan mahasiswa jogja dan customer umum. Untuk guest house kamar yang kami tawarkan juga bisa anda booking melalui aplikasi Traveloka dengan harga yang lebih murah dan terjangkau untuk mahasiswa dan pelajar yogya. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.<span class="wave">👋</span></q></p><hr>
 		<p><img alt="logo bening" width="250" height="100" data-src="/uploads/logo-bening.webp" class="lazyload" /></p>
 	</div>
 <div class="testimonials">
-	   <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/sewa-motor" title="Sewa MotorYogya">SEWA MOTOR MULAI 50 RIBU!!</a></p><p><img alt="motor" data-src="/uploads/motor-baru1.webp" width="360" height="239" class="lazyload" /></p>
-			<p class="testimonial-author"><img src="/uploads/aji.webp" alt="Photo of Adjie" />Adjie</p>
-		</blockquote>
 <blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" data-src="/uploads/mobil-icon1.webp" width="360" height="239" class="lazyload" /></p>
 			<p class="testimonial-author"><img src="/uploads/nunik.webp" alt="Photo of Nunik" />Nunik</p>
